# ExcelFormat

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
example/: Examples.cpp
src/: BasicExcel.cpp  BasicExcel.hpp  ExcelFormat.cpp  ExcelFormat.h
vs_solution/: ExcelFormat.vcxproj  ExcelFormat.vcxproj.filters
